# gr-openssl

./: .gitignore  BRANCHES.md  CMakeLists.txt  README.md  TEST_VERIFICATION.md
docs/: README.crypto
gnuradio4/: .gitignore  CMakeLists.txt
gnuradio4/cmake/: gnuradio4-gr-openssl.pc.in  gr-openssl4-config.cmake.in
gnuradio4/include/gnuradio-4.0/: openssl.hpp
gnuradio4/include/gnuradio-4.0/openssl/: AuthDecAesGcm.hpp  AuthEncAesGcm.hpp  Hash.hpp  SymDec.hpp  SymDecTaggedBb.hpp  SymEnc.hpp  SymEncTaggedBb.hpp
gnuradio4/include/gnuradio-4.0/openssl/detail/: Helpers.hpp  KeyDerivation.hpp  OpenSslAliases.hpp
gnuradio4/test/: CMakeLists.txt  qa_AuthDecAesGcm.cpp  qa_AuthEncAesGcm.cpp  qa_Hash.cpp  qa_SymDec.cpp  qa_SymDecTaggedBb.cpp  qa_SymEnc.cpp  qa_SymEncTaggedBb.cpp
grc/: CMakeLists.txt  crypto.tree.yml  crypto_auth_dec_aes_gcm.block.yml  crypto_auth_enc_aes_gcm.block.yml  crypto_hash.block.yml  crypto_sym_ciph_desc.block.yml  crypto_sym_dec.block.yml  crypto_sym_dec_tagged_bb.block.yml  crypto_sym_enc.block.yml  crypto_sym_enc_tagged_bb.block.yml
include/crypto/: auth_dec_aes_gcm.h  auth_enc_aes_gcm.h  hash.h  sym_ciph_desc.h  sym_dec.h  sym_dec_tagged_bb.h  sym_enc.h  sym_enc_tagged_bb.h
lib/: CMakeLists.txt  auth_dec_aes_gcm_impl.cc  auth_enc_aes_gcm_impl.cc  hash_impl.cc  sym_ciph_desc.cc  sym_dec_impl.cc  sym_dec_tagged_bb_impl.cc  sym_enc_impl.cc  sym_enc_tagged_bb_impl.cc  test_crypto.cc
python/: CMakeLists.txt  __init__.py  build_utils.py  crypto_python.cc  crypto_swig.py  gnuradio_crypto_init.py  qa_auth_enc_aes_gcm.py  qa_hash.py  qa_sym_dec.py  qa_sym_dec_tagged_bb.py  qa_sym_enc.py  qa_sym_enc_tagged_bb.py  qa_sym_enc_test_vectors.py
swig/: CMakeLists.txt
